Form that displays profile pic,name using react

--- a/components/formstyle.css
+++ b/components/formstyle.css
@@ -49,3 +49,36 @@ textarea {
   border-radius: 4px;
   resize: vertical;
 }
+
+.upload-btn-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.btn1 {
+  border: 2px solid gray;
+  color: gray;
+  background-color: white;
+  padding: 8px 20px;
+  border-radius: 8px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.upload-btn-wrapper input[type="file"] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+  margin-left: 90%;
+  margin-top: 5px;
+  border-radius: 50%;
+}
+
