weekdone quarterly objectives concept

--- a/App.css
+++ b/App.css
@@ -2,126 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
+.todo-wrapper {
+  margin: 20px auto 20px auto;
+  width: 500px;
+  min-height: 600px;
+  /* border: 5px solid rgba(73, 204, 249, 1); */
   padding: 20px;
-  color: white;
 }
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-.display {
-  margin-top: 105px;
-  color: white;
-  background-image: url("https://wallpaperplay.com/walls/full/f/8/7/45623.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  display: flex;
-}
-.vdisplay {
-  padding-left: 20px;
-}
-
-/* CSS for api
-#main1 {
-  background-image: url("https://static.videezy.com/system/resources/thumbnails/000/010/372/original/loop-of-soft-pink-lights-moving-and-fading-on-4k-dark-background.jpg");
-}
-.app {
-  margin: 3em auto;
-  width: 90%;
-}
-
-.gif-item {
-  box-shadow: 2px 2px 4px 0 #ccc;
-  box-sizing: border-box;
-  display: inline-block;
-  margin: 0 0 1.5em;
-  padding: 1em;
-  width: 100%;
-}
-
-.gif-item img {
-  width: 100%;
-}
-
-.gif-list {
-  column-gap: 1.5em;
-  font-size: 0.85em;
-  margin: 1.5em 0;
-  padding: 0;
-}
-img {
-  display: block;
-  margin-left: 30px;
-
-  width: 20%;
-}
-input {
-  display: block;
-  font-size: 22px;
-  height: 50px;
-  margin-left: -100px;
-  text-align: center;
-  width: 50%;
-}
-
-@media only screen and (min-width: 400px) {
-  .gif-list {
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    column-count: 2;
-  }
-}
-
-@media only screen and (min-width: 700px) {
-  .gif-list {
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
-    column-count: 3;
-  }
-}
-
-@media only screen and (min-width: 900px) {
-  .gif-list {
-    -moz-column-count: 4;
-    -webkit-column-count: 4;
-    column-count: 4;
-  }
-}
-
-@media only screen and (min-width: 1100px) {
-  .gif-list {
-    -moz-column-count: 5;
-    -webkit-column-count: 5;
-    column-count: 5;
-  }
-}
-
-@media only screen and (min-width: 1280px) {
-  .app {
-    width: 1140px;
-  }
-}
-
-.search {
-  font-size: x-large;
-  font-family: serif;
-  color: rgb(225, 230, 231);
-  margin-left: 40%;
-} */
